# scrapeomatic

./: .gitignore  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst  requirements.txt
scrapeomatic/: collector.py
scrapeomatic/collectors/: facebook.py  github.py  instagram.py  tiktok.html  tiktok.py  tiktok2.py  tiktok3.html  tiktok3.py  tiktok4.py  twitter.py  youtube.py
scrapeomatic/tests/: test_github.py  test_instagram.py  test_tiktok.py  test_twitter.py  test_youtube.py
scrapeomatic/utils/: async_utils.py  constants.py  utils.py
scrapeomatic/utils/tiktok/: README.md  xbogus.py
scrapomatic/: collector.py
scrapomatic/collectors/: github.py  instagram.py  tiktok.py
scrapomatic/tests/: test_instagram.py  test_tiktok.py
scrapomatic/utils/: constants.py
social-media-profile-scrapers/: facebook.py  tests.py
src/scrapeomatic/collectors/: instagram.py  tiktok.py
tests/: test_instagram.py  test_tiktok.py
